--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ header .navbar a:hover::after {
   padding: 4rem 11rem 0 5rem;
   justify-content: space-between;
   align-items: center;
-  background-image: url(/img/tongkonan.png);
+  background-image: url(img/tongkonan.png);
   background-repeat: no-repeat;
   background-position: 47vh;
   background-position-y: 12.3rem;
@@ -119,7 +119,7 @@ header .navbar a:hover::after {
 
 .antara {
   height: 2rem;
-  background-image: url(/img/ukirantoraja.jpg);
+  background-image: url(img/ukirantoraja.jpg);
   background-size: 9rem;
   box-shadow: 0 0 10px rgba(8, 8, 8, 0.7);
   opacity: 0.8;
